<resources>
    <string name="app_name">Kameleon</string>
    <string name="weather_mode">Weather Mode</string>
    <string name="weather_mode_desc">Automatically changes the wallpaper depending on the weather outside.</string>
    <string name="wifi_mode">Wi-Fi Mode</string>
    <string name="wifi_mode_desc">Automatically changes the wallpaper depending on your Wi-Fi network. PNGs and JPEGs recommended.</string>
    <string name="temp_mode">Temperature Mode</string>
    <string name="temp_mode_desc">Automatically changes the wallpaper depending on the temperature outside.</string>
    <string name="mode_button">Select</string>
    <string name="temp_setting">Temperature</string>
    <string name="temp_setting_desc">Change the units of the temperature displayed.</string>
    <string name="weather_widget">Weather Data</string>
    <string name="weather_widget_desc">Select a piece of weather data to display within the background.</string>
    <string name="cartoon_pack">Cartoon Pack</string>
    <string name="nature_pack">Nature Pack</string>
    <string name="refresh_time">Refresh Time</string>
    <string name="refresh_time_desc">Specify how often the app refreshes and changes the wallpaper.</string>
    <string name="refresh_time_button">Refresh</string>
    <string name="wifi_fragment_info">Click on an SSID to assign an image. PNGs and JPEGs are recommended.</string>
</resources>
