<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/cartoon_pack_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="14dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:elevation="4dp"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/cartoon_pack_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:paddingBottom="5dp"
                            android:text="@string/cartoon_pack"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/cartoon_pack_thumbnail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/cartoon_pack_title"
                            android:layout_marginTop="6dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_cartoon_pack_thumb" />

                        <Button
                            android:id="@+id/cartoon_pack_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cartoon_pack_thumbnail"
                            android:layout_marginTop="8dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/mode_button"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/nature_pack_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="14dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:elevation="4dp"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/nature_pack_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:paddingBottom="5dp"
                            android:text="@string/nature_pack"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/nature_pack_thumbnail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/nature_pack_title"
                            android:layout_marginTop="6dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_nature_pack_thumb" />

                        <Button
                            android:id="@+id/nature_pack_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/nature_pack_thumbnail"
                            android:layout_marginTop="8dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/mode_button"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>